--- a/index.html
+++ b/index.html
@@ -300,6 +300,88 @@ https://templatemo.com/tm-595-3d-coverflow
     </div>
 
 <script src="templatemo-3d-coverflow-scripts.js"></script>
+!-- تحميل CSS الأصلي -->
+<link href="https://cdn.jsdelivr.net/npm/@n8n/chat/dist/style.css" rel="stylesheet" />
 
+
+<!-- تخصيص الثيم + دعم RTL -->
+<style>
+        :root {
+                --chat--color-primary: #1e3a8a; /* أزرق رئيسي */
+                --chat--color-primary-shade-50: #1e40af;
+                --chat--color-primary-shade-100: #1e429f;
+
+
+                --chat--color-secondary: #0f172a; /* خلفية المستخدم */
+                --chat--color-secondary-shade-50: #1e293b;
+
+
+                --chat--color-white: #ffffff;
+                --chat--color-light: #1a1a1a;
+                --chat--color-light-shade-50: #111827;
+                --chat--color-light-shade-100: #1f2937;
+
+
+                --chat--color-medium: #2c2c2c;
+                --chat--color-dark: #000000;
+
+
+                --chat--message--bot--background: var(--chat--color-primary);
+                --chat--message--bot--color: var(--chat--color-white);
+                --chat--message--user--background: var(--chat--color-secondary);
+                --chat--message--user--color: var(--chat--color-white);
+
+
+                --chat--toggle--background: var(--chat--color-primary);
+                --chat--toggle--hover--background: var(--chat--color-primary-shade-50);
+                --chat--toggle--active--background: var(--chat--color-primary-shade-100);
+                --chat--toggle--color: var(--chat--color-white);
+
+
+                --chat--header--background: var(--chat--color-dark);
+                --chat--header--color: var(--chat--color-white);
+        }
+
+
+        /* دعم الاتجاه RTL */
+        #n8n-chat,
+        .n8n-chat-container,
+        .n8n-chat-bubble,
+        .n8n-chat-user-bubble,
+        .n8n-chat-footer input {
+                direction: rtl !important;
+                text-align: right !important;
+                font-family: 'Tajawal', sans-serif;
+        }
+</style>
+
+
+<!-- كود التفعيل -->
+<script type="module">
+        import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.es.js';
+
+
+        createChat({
+                webhookUrl: 'https://nagadia.app.n8n.cloud/webhook/d62c31c4-2b32-404a-9cb9-a2bc0a56c013/chat',
+                defaultLanguage: 'ar',
+                initialMessages: [
+                        'مرحبًا 👋',
+                        'معك احمد، كيف ممكن أساعدك؟'
+                ],
+                i18n: {
+                        ar: {
+                                title: 'أهلاً وسهلاً 👋',
+                                subtitle: 'ابدأ المحادثة، متواجدين على مدار الساعة لخدمتك.',
+                                inputPlaceholder: 'اكتب سؤالك...',
+                                getStarted: 'بدء المحادثة'
+                        }
+                }
+        });
+</script>
+
+
+<!-- عنصر الشات -->
+<div id="n8n-chat"></div>
 </body>
+
 </html>
