--- a/index.html
+++ b/index.html
@@ -366,13 +366,13 @@ https://templatemo.com/tm-595-3d-coverflow
                 defaultLanguage: 'ar',
                 initialMessages: [
                         'مرحبًا 👋',
-                        'معك احمد، كيف ممكن أساعدك؟'
+                        'انا الشات بوت الخاص بشركة ناجاديا'
                 ],
                 i18n: {
                         ar: {
                                 title: 'أهلاً وسهلاً 👋',
                                 subtitle: 'ابدأ المحادثة، متواجدين على مدار الساعة لخدمتك.',
-                                inputPlaceholder: 'اكتب سؤالك...',
+                                inputPlaceholder: ' اكتب سؤالك وجرب البوت...',
                                 getStarted: 'بدء المحادثة'
                         }
                 }
@@ -385,3 +385,4 @@ https://templatemo.com/tm-595-3d-coverflow
 </body>
 
 </html>
+
